--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,5 @@
 [pytest]
-addopts = --pyargs idaes
-          --durations=100
+addopts = --durations=100
           -W ignore
 log_file = pytest.log
 log_file_date_format = %Y-%m-%dT%H:%M:%S
